--- a/Competency.html
+++ b/Competency.html
@@ -117,70 +117,88 @@
     <script>
         let draggedElement = null;
 
-        // 支持触控事件的拖曳功能
         document.querySelectorAll('.draggable').forEach(draggable => {
-            // 鼠标拖曳支持
+            // 支持鼠标拖曳
             draggable.addEventListener('dragstart', function (e) {
                 draggedElement = e.target;
+                e.dataTransfer.setData('text/plain', null);
             });
 
-            // 触控支持
+            // 触摸支持
             draggable.addEventListener('touchstart', function (e) {
                 draggedElement = e.target;
-                e.preventDefault(); // 阻止默认的触控事件
-            });
-
-            draggable.addEventListener('touchmove', function (e) {
-                e.preventDefault(); // 阻止默认的触控事件
-                const touch = e.touches[0];
-                draggedElement.style.position = 'fixed';
-                draggedElement.style.left = `${touch.clientX - draggedElement.offsetWidth / 2}px`;
-                draggedElement.style.top = `${touch.clientY - draggedElement.offsetHeight / 2}px`;
+                draggedElement.style.position = 'absolute';
                 draggedElement.style.zIndex = '1000';
             });
 
-            draggable.addEventListener('touchend', function (e) {
-                e.preventDefault(); // 阻止默认的触控事件
+            draggable.addEventListener('touchmove', function (e) {
+                const touch = e.touches[0];
+                draggedElement.style.left = `${touch.clientX - draggedElement.offsetWidth / 2}px`;
+                draggedElement.style.top = `${touch.clientY - draggedElement.offsetHeight / 2}px`;
+            });
 
-                // 获取所有空白区域
-                const blanks = document.querySelectorAll('.blank');
-                let placed = false;
-
-                // 检查是否在任何空白区域内
-                blanks.forEach(blank => {
-                    const blankRect = blank.getBoundingClientRect();
-                    const draggedRect = draggedElement.getBoundingClientRect();
-                    
-                    if (
-                        draggedRect.top > blankRect.top &&
-                        draggedRect.bottom < blankRect.bottom &&
-                        draggedRect.left > blankRect.left &&
-                        draggedRect.right < blankRect.right
-                    ) {
-                        // 如果空格已有答案，返回之前的答案
-                        if (blank.dataset.userAnswer && blank.style.color !== 'green') {
-                            const previousAnswer = document.querySelector(`[data-answer="${blank.dataset.userAnswer}"]`);
-                            previousAnswer.style.display = 'inline-block';
-                        }
-
-                        blank.textContent = draggedElement.textContent;
-                        blank.dataset.userAnswer = draggedElement.dataset.answer;
-                        blank.style.color = '#333'; // 重置为黑色
-                        draggedElement.style.display = 'none';
-                        placed = true;
-                    }
-                });
-
-                if (!placed) {
-                    draggedElement.style.position = 'relative';
-                }
-
-                draggedElement.style.left = '';
-                draggedElement.style.top = '';
-                draggedElement.style.zIndex = '';
-                draggedElement = null;
+            draggable.addEventListener('touchend', function () {
+                checkDrop();
+                resetDraggedElement();
             });
         });
+
+        document.querySelectorAll('.blank').forEach(blank => {
+            blank.addEventListener('dragover', function (e) {
+                e.preventDefault();
+            });
+
+            blank.addEventListener('drop', function (e) {
+                e.preventDefault();
+                if (draggedElement) {
+                    if (blank.dataset.userAnswer && blank.style.color !== 'green') {
+                        const previousAnswer = document.querySelector(`[data-answer="${blank.dataset.userAnswer}"]`);
+                        previousAnswer.style.display = 'inline-block';
+                    }
+                    blank.textContent = draggedElement.textContent;
+                    blank.dataset.userAnswer = draggedElement.dataset.answer;
+                    blank.style.color = '#333'; // 重置为黑色
+                    draggedElement.style.display = 'none';
+                    resetDraggedElement();
+                }
+            });
+        });
+
+        function checkDrop() {
+            const blanks = document.querySelectorAll('.blank');
+            let placed = false;
+            blanks.forEach(blank => {
+                const blankRect = blank.getBoundingClientRect();
+                const draggedRect = draggedElement.getBoundingClientRect();
+                if (
+                    draggedRect.top > blankRect.top &&
+                    draggedRect.bottom < blankRect.bottom &&
+                    draggedRect.left > blankRect.left &&
+                    draggedRect.right < blankRect.right
+                ) {
+                    if (blank.dataset.userAnswer && blank.style.color !== 'green') {
+                        const previousAnswer = document.querySelector(`[data-answer="${blank.dataset.userAnswer}"]`);
+                        previousAnswer.style.display = 'inline-block';
+                    }
+                    blank.textContent = draggedElement.textContent;
+                    blank.dataset.userAnswer = draggedElement.dataset.answer;
+                    blank.style.color = '#333';
+                    draggedElement.style.display = 'none';
+                    placed = true;
+                }
+            });
+            if (!placed) {
+                draggedElement.style.position = 'relative';
+            }
+        }
+
+        function resetDraggedElement() {
+            draggedElement.style.left = '';
+            draggedElement.style.top = '';
+            draggedElement.style.zIndex = '';
+            draggedElement.style.position = 'relative';
+            draggedElement = null;
+        }
 
         // 确认答案按钮
         document.getElementById('submit').addEventListener('click', function () {
