--- a/Competency.html
+++ b/Competency.html
@@ -142,6 +142,12 @@
             opacity: 0.7;
             transform: scale(1.05);
         }
+
+        @media screen and (max-width: 768px) {
+            body {
+                font-size: 0.6em;
+            }
+        }
     </style>
 </head>
 <body>
