--- a/Competency.html
+++ b/Competency.html
@@ -147,6 +147,12 @@
             body {
                 font-size: 0.6em;
             }
+
+            #game-container {
+
+                font-size: 0.6em;
+            }
+
         }
     </style>
 </head>
