--- a/Competency.html
+++ b/Competency.html
@@ -125,6 +125,26 @@
             z-index: 1000;
         }
 
+
+
+ #next-question {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #4299E1;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#next-question:hover {
+    background-color: #3182CE;
+    transform: translateY(-2px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
        @media screen and (min-width: 769px) and (orientation: landscape) {
     #orientation-message {
         display: block;
@@ -342,13 +362,38 @@ function checkAnswers() {
     });
     const resultElement = document.getElementById('result');
     if (allCorrect) {
-        resultElement.textContent = '恭喜你！所有答案都正確！';
-        resultElement.style.color = '#38A169';
+        // 修改頁面內容
+        const gameContainer = document.getElementById('game-container');
+        gameContainer.innerHTML = `
+            <h1>高中物理素養題</h1>
+            <div>
+                <p>詳解:</p>
+                <p><strong>重力</strong></p>
+                <p>首先，重力是作用範圍可達無窮遠的力。重力雖然相對其他基本力來說非常微弱，但因其作用範圍廣泛，對於天體運動、星系形成等大尺度結構具有極其重要的影響。重力在宇宙學和天體物理學中扮演著核心角色，支配著行星、恆星、星系甚至整個宇宙的結構和演化。</p>
+                <p><strong>弱力</strong></p>
+                <p>相對於重力，弱力的作用範圍非常微小，僅在亞原子粒子之間發揮作用。弱力是導致某些粒子衰變的關鍵力量，特別是在β衰變過程中，單獨的中子可以在弱力的作用下衰變為質子、電子和反微中子。弱力在粒子物理學和核物理學中起著重要作用，尤其在放射性衰變和核反應中。</p>
+                <p><strong>電磁力</strong></p>
+                <p>在原子內部，電子繞著原子核運動主要是由於電磁力的存在。電磁力是由帶電粒子之間的電荷互相作用產生的。它是使電子保持在原子核周圍運動的主要力量，而不是重力。電磁力不僅在原子尺度上起作用，還在化學反應、材料性質以及電力傳輸中扮演著關鍵角色。</p>
+                <p><strong>強力</strong></p>
+                <p>最後，強力是作用在原子核內的質子與中子之間的一種強大的力。強力的作用範圍極短，但它是所有基本力中最強的一種。強力能夠克服質子之間的電磁排斥作用，將質子和中子緊密地結合在一起，維持原子核的穩定性。因此，強力是原子核結構的基礎，也是核能和核反應的根本來源。</p>
+            </div>
+            <button id="next-question" onclick="loadNextQuestion()">下一題</button>
+        `;
+
+        // 設置按鈕樣式和居中
+        const nextButton = document.getElementById('next-question');
+        nextButton.style.display = 'block';
+        nextButton.style.margin = '20px auto';  // 居中
     } else {
         resultElement.textContent = `答對了 ${correctCount} 題，繼續加油！`;
         resultElement.style.color = '#2B6CB0';
     }
     updateMessage('答案已檢查，請繼續完成題目。');
+}
+
+function loadNextQuestion() {
+    // 這裡可以添加加載下一題的邏輯
+    alert('下一題功能尚未實現');
 }
 
 function updateMessage(text) {
